standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/ResonanceReactions.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// ResonanceReactions is the basic handle type in this file. Example:
//    // Create a default ResonanceReactions object:
//    ResonanceReactions handle = ResonanceReactionsDefault();
// Functions involving ResonanceReactions are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_MEAN_RESONANCEREACTIONS
#define C_INTERFACE_ALPHA_V2_0_MEAN_RESONANCEREACTIONS

#include "GNDStk.h"
#include "v2.0/mean/ResonanceReaction.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ResonanceReactionsClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ ResonanceReactions
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ResonanceReactionsClass *ResonanceReactions;

// --- Const-aware handles.
typedef const struct ResonanceReactionsClass *const ConstHandle2ConstResonanceReactions;
typedef       struct ResonanceReactionsClass *const ConstHandle2ResonanceReactions;
typedef const struct ResonanceReactionsClass *      Handle2ConstResonanceReactions;
typedef       struct ResonanceReactionsClass *      Handle2ResonanceReactions;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstResonanceReactions
ResonanceReactionsDefaultConst();

// +++ Create, default
extern_c Handle2ResonanceReactions
ResonanceReactionsDefault();

// --- Create, general, const
extern_c Handle2ConstResonanceReactions
ResonanceReactionsCreateConst(
   ConstHandle2ResonanceReaction *const resonanceReaction, const size_t resonanceReactionSize
);

// +++ Create, general
extern_c Handle2ResonanceReactions
ResonanceReactionsCreate(
   ConstHandle2ResonanceReaction *const resonanceReaction, const size_t resonanceReactionSize
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ResonanceReactionsAssign(ConstHandle2ResonanceReactions This, ConstHandle2ConstResonanceReactions from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ResonanceReactionsDelete(ConstHandle2ConstResonanceReactions This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ResonanceReactionsRead(ConstHandle2ResonanceReactions This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ResonanceReactionsWrite(ConstHandle2ConstResonanceReactions This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ResonanceReactionsPrint(ConstHandle2ConstResonanceReactions This);

// +++ Print to standard output, as XML
extern_c int
ResonanceReactionsPrintXML(ConstHandle2ConstResonanceReactions This);

// +++ Print to standard output, as JSON
extern_c int
ResonanceReactionsPrintJSON(ConstHandle2ConstResonanceReactions This);


// -----------------------------------------------------------------------------
// Child: resonanceReaction
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ResonanceReactionsResonanceReactionHas(ConstHandle2ConstResonanceReactions This);

// +++ Clear
extern_c void
ResonanceReactionsResonanceReactionClear(ConstHandle2ResonanceReactions This);

// +++ Size
extern_c size_t
ResonanceReactionsResonanceReactionSize(ConstHandle2ConstResonanceReactions This);

// +++ Add
extern_c void
ResonanceReactionsResonanceReactionAdd(ConstHandle2ResonanceReactions This, ConstHandle2ConstResonanceReaction resonanceReaction);

// --- Get, by index \in [0,size), const
extern_c Handle2ConstResonanceReaction
ResonanceReactionsResonanceReactionGetConst(ConstHandle2ConstResonanceReactions This, const size_t index_);

// +++ Get, by index \in [0,size), non-const
extern_c Handle2ResonanceReaction
ResonanceReactionsResonanceReactionGet(ConstHandle2ResonanceReactions This, const size_t index_);

// +++ Set, by index \in [0,size)
extern_c void
ResonanceReactionsResonanceReactionSet(
   ConstHandle2ResonanceReactions This,
   const size_t index_,
   ConstHandle2ConstResonanceReaction resonanceReaction
);

// +++ Has, by label
extern_c int
ResonanceReactionsResonanceReactionHasByLabel(
   ConstHandle2ConstResonanceReactions This,
   const char *const label
);

// --- Get, by label, const
extern_c Handle2ConstResonanceReaction
ResonanceReactionsResonanceReactionGetByLabelConst(
   ConstHandle2ConstResonanceReactions This,
   const char *const label
);

// +++ Get, by label, non-const
extern_c Handle2ResonanceReaction
ResonanceReactionsResonanceReactionGetByLabel(
   ConstHandle2ResonanceReactions This,
   const char *const label
);

// +++ Set, by label
extern_c void
ResonanceReactionsResonanceReactionSetByLabel(
   ConstHandle2ResonanceReactions This,
   const char *const label,
   ConstHandle2ConstResonanceReaction resonanceReaction
);

// +++ Has, by ejectile
extern_c int
ResonanceReactionsResonanceReactionHasByEjectile(
   ConstHandle2ConstResonanceReactions This,
   const char *const ejectile
);

// --- Get, by ejectile, const
extern_c Handle2ConstResonanceReaction
ResonanceReactionsResonanceReactionGetByEjectileConst(
   ConstHandle2ConstResonanceReactions This,
   const char *const ejectile
);

// +++ Get, by ejectile, non-const
extern_c Handle2ResonanceReaction
ResonanceReactionsResonanceReactionGetByEjectile(
   ConstHandle2ResonanceReactions This,
   const char *const ejectile
);

// +++ Set, by ejectile
extern_c void
ResonanceReactionsResonanceReactionSetByEjectile(
   ConstHandle2ResonanceReactions This,
   const char *const ejectile,
   ConstHandle2ConstResonanceReaction resonanceReaction
);

// +++ Has, by eliminated
extern_c int
ResonanceReactionsResonanceReactionHasByEliminated(
   ConstHandle2ConstResonanceReactions This,
   const bool eliminated
);

// --- Get, by eliminated, const
extern_c Handle2ConstResonanceReaction
ResonanceReactionsResonanceReactionGetByEliminatedConst(
   ConstHandle2ConstResonanceReactions This,
   const bool eliminated
);

// +++ Get, by eliminated, non-const
extern_c Handle2ResonanceReaction
ResonanceReactionsResonanceReactionGetByEliminated(
   ConstHandle2ResonanceReactions This,
   const bool eliminated
);

// +++ Set, by eliminated
extern_c void
ResonanceReactionsResonanceReactionSetByEliminated(
   ConstHandle2ResonanceReactions This,
   const bool eliminated,
   ConstHandle2ConstResonanceReaction resonanceReaction
);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/mean/ResonanceReactions/src/custom.h"

#undef extern_c
#endif